tests/ui/duplicate/dupe-symbols-8.stderr
error: entry symbol `main` declared multiple times
  --> $DIR/dupe-symbols-8.rs:8:1
   |
LL | fn main() {
   | ^^^^^^^^^
   |
   = help: did you use `#[no_mangle]` on `fn main`? Use `#[start]` instead

error: aborting due to 1 previous error

